--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "artesaos/seotools": "^0.18.0",
         "cviebrock/eloquent-sluggable": "^7.0",
+        "davejamesmiller/laravel-breadcrumbs": "^5.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -18,7 +20,8 @@
         "laravel/ui": "^2.0",
         "netojose/laravel-bootstrap-4-forms": "^3.0",
         "santigarcor/laratrust": "^6.1",
-        "watson/active": "^5.0"
+        "watson/active": "^5.0",
+        "yajra/laravel-datatables-oracle": "^9.10"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
